--- a/patients-portal-api/patients-portal-api.csproj
+++ b/patients-portal-api/patients-portal-api.csproj
@@ -9,6 +9,7 @@
     <PackageId>patients-portal-api</PackageId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="litedb" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
