--- a/patients-portal-api/Dockerfile
+++ b/patients-portal-api/Dockerfile
@@ -15,4 +15,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "eu.fiit.PatientsPortal.dll"]
+ENTRYPOINT ["dotnet", "patients-portal-api.dll"]
